--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ torchaudio==0.13.0
 omegaconf==2.2.3
 librosa==0.9.2
 transformers==4.24.0
+SentencePiece==0.1.97
 vosk==0.3.44
 git+https://github.com/openai/whisper.git
